--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <title>Connor Glynn</title>
 </head>
 <body>
-    Welcome to my website!
+    Welcome to my website! testing auto deploy!
 </body>
 </html>
