--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <title>Connor Glynn</title>
 </head>
-<body>
-    Connor Glynn, harry walker
+<body style="background-color: rgb(38,41,81); color: white; font-family: 'Oswald', sans-serif; text-align: center;">
+    <h1 style="margin-bottom: 0px">connorglynn.com</h1>
+    <p style="margin-top: 0px">under development...</p>
 </body>
 </html>
